--- a/source/_posts/基础知识.md
+++ b/source/_posts/基础知识.md
@@ -1,11 +1,17 @@
 ---
-title: 前端基础知识
-categories: 前端基础学习
+title: google js 规范
+categories: 规范
 tags:
   - js
-  - css
-  - html
-excerpt: 最开始的基础知识
+excerpt: 代码书写规范
 date: 2018-06-03 20:33:36
 cover: /image/md-image/javascript.jpg
 ---
+
+
+#### 文件规范
+
+1. 文件名必须小写但是可以含有（_或者-）但是不能含有其他的符号
+2. 源文件以 UTF-8 编码
+3. 制表符不用于缩进
+4. 对于任何具有特殊转义序列（\'、\"、\\、\b、\f、\n、\r、\t、\v）的字符，将使用该序列而不是相应的数字转义（例如\x0a、\u000a 或 \u{a}）。从不使用传统的八进制转义。
